ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
spec:
  rules:
    - host: nodejs-service.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-service 
                port:
                  number: 3000
